Redo prisma DB after lost data

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -11,3 +11,20 @@
 /**
  * END --- SETUP TAILWINDCSS EDIT
  */
+
+ #jost {
+
+    font-family: 'Jost', sans-serif;
+    font-weight: 400;
+
+ }
+
+ #rajdhani {
+  font-family: 'Rajdhani', sans-serif;
+   font-weight: 700;
+ }
+
+ #rajdhani-400 {
+  font-family: 'Rajdhani', sans-serif;
+   font-weight: 400;
+ }
