clean up code and remove errors, alter styling

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -28,3 +28,23 @@
   font-family: 'Rajdhani', sans-serif;
    font-weight: 400;
  }
+
+ #fogra{
+  background-color: #050505;
+ }
+
+ #blue {
+   background-color: #1B9AAA;
+ }
+
+ #bone {
+  background-color:#DDDBCB;
+ }
+
+ #goldenrod {
+  background-color: #71697A;
+ }
+
+ #text-gray {
+   color: #2C423F;
+ }
